# rocket.rs-heroes-from-medium

./: .env  Cargo.toml  README.md  Rocket.toml
imgs/: cropped-DSC_0124-1 - cropped-DSC_0124-1.tif
migrations/2021-09-27-194045_heroes/: up.sql
migrations/src/: schema.rs
src/: heroes.rs  main.rs  models.rs  schema.rs
templates/: new.html.hbs  pending.html.hbs  update.html.hbs
